更新全量包名配置

--- a/config.json
+++ b/config.json
@@ -812,7 +812,7 @@
                     5,
                     2
                 ],
-                "fullResource": "https://activ.digitalshield.cn/data/full_res.zip",
+                "fullResource": "https://qiaomc.github.io/update_res.zip",
                 "fullResourceRange": [
                     "1.1.2",
                     "2.1.0"
